--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-123456
+<!DOCTYPE html>
+<html lang="en">
+<head>
+        <link rel="stylesheet" href="style.css" type="text/css"/>
+    <title>Closed!</title>
+    </head>
+<body>
+  <div class="wrapper">
+		<div class="blur"></div>
+	<article class=content>
+            <a id="logo" href="https://gmail.com.lc">
+            </a>
+            <h1>Registration closed for the weekend</h1>
+		        <p>Everyone needs a bit of rest. Check back on monday</p>
+	          <p>&mdash; The Disroot Team.</p>
+  </article>
+  </div>
+  <div id="footer">
+              </div>
+</body>
+</html>
