--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
    <div class="blur"></div>
    <article class=content>
         <a id="logo" href="https://gmail.com.lc"></a>
-        <h1>Secure and private email</h1>
+        <h1>Email privacy reception</h1>
+        <h2>secure and private email</h2>
         <p>Reclaim your email privacy</p>
         <p>&mdash; The Disroot Team.</p>
    </article>
