--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Email privacy reception</h1>
         <h2>secure and private email</h2>
         <p>Reclaim your email privacy</p>
-        <p>Apply for email mail<span style="display:none">@</span>hn@<span style="display:none">@</span>gmail<span style="display:none">@</span>.com.lc</p>
+        <p>Apply for email ma<span style="display:none">@</span>il@<span style="display:none">@</span>gmail<span style="display:none">@</span>.com.lc</p>
         <p>&mdash; The Disroot Team.</p>
    </article>
 </div>
