--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <p>&mdash; The Disroot Team.</p>
    </article>
 </div>
-<div id="footer"></div>
+<div id="footer"><a href="/private-email.html" style="color: white;">Private email</a></div>
 </body>
 </html>
