--- a/private-email.html
+++ b/private-email.html
@@ -2,8 +2,8 @@
 <html lang="en" prefix="og: http://ogp.me/ns#" dir="ltr">
 <head>
 	<meta charset="utf-8" />
-	<link href="https://mailfence.com/c/mailfence/css/page.css?kvkdkjhygd" rel="stylesheet">
-	<link href="/c/mailfence/css/page_next.css?kvkdkjhygd" rel="stylesheet">
+	<link href="style.css?kvkdkjhygd" rel="stylesheet">
+	<link href="https://mailfence.com/c/mailfence/css/page_next.css?kvkdkjhygd" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Mailfence">
 
