--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <title>Closed!</title>
+    <style>body { background: url("assets/bgimage.jpg") no-repeat ;}</style>
 </head>
 <body>
 <div class="wrapper">
