--- a/private-email.html
+++ b/private-email.html
@@ -93,7 +93,7 @@
                <div class="col of-2">
                </div>
                <div class="col of-8">
-                  <a href="/registration/?lg=en&amp;back=1&amp;nextPage=%2Fsw%3Ftype%3DL%26state%3D0%26lf%3Dmailfence" class="register_button" rel="nofollow" aria-label="Register">Sign up</a>
+                  <a href="/" class="register_button" rel="nofollow" aria-label="Register">Home</a>
                </div>
                <div class="col of-2">
                </div>
@@ -104,37 +104,37 @@
    <footer class="container limit" id="page-footer" role="footer">
       <div class="row socialmedia">
          <div>
-            <a href="https://twitter.com/mailfence" class="social" target="_blank" rel="noopener" title="Twitter">
+            <a href="https://twitter.com/" class="social" target="_blank" rel="noopener" title="Twitter">
                <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 1 49 49">
                   <path d="M 11 4 C 7.134 4 4 7.134 4 11 L 4 39 C 4 42.866 7.134 46 11 46 L 39 46 C 42.866 46 46 42.866 46 39 L 46 11 C 46 7.134 42.866 4 39 4 L 11 4 z M 13.085938 13 L 21.023438 13 L 26.660156 21.009766 L 33.5 13 L 36 13 L 27.789062 22.613281 L 37.914062 37 L 29.978516 37 L 23.4375 27.707031 L 15.5 37 L 13 37 L 22.308594 26.103516 L 13.085938 13 z M 16.914062 15 L 31.021484 35 L 34.085938 35 L 19.978516 15 L 16.914062 15 z">
                   </path>
                </svg>
             </a>
-            <a href="https://www.facebook.com/mailfence" class="social" target="_blank" rel="noopener" title="Facebook">
+            <a href="https://www.facebook.com/" class="social" target="_blank" rel="noopener" title="Facebook">
                <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <path d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z">
                   </path>
                </svg>
             </a>
-            <a href="https://www.linkedin.com/company/mailfence" class="social" target="_blank" rel="noopener">
+            <a href="https://www.linkedin.com/company/" class="social" target="_blank" rel="noopener">
                <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z">
                   </path>
                </svg>
             </a>
-            <a href="https://www.reddit.com/r/mailfence" class="social" target="_blank" rel="noopener">
+            <a href="https://www.reddit.com/" class="social" target="_blank" rel="noopener">
                <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <path d="M283.2 345.5c2.7 2.7 2.7 6.8 0 9.2-24.5 24.5-93.8 24.6-118.4 0-2.7-2.4-2.7-6.5 0-9.2 2.4-2.4 6.5-2.4 8.9 0 18.7 19.2 81 19.6 100.5 0 2.4-2.3 6.6-2.3 9 0zm-91.3-53.8c0-14.9-11.9-26.8-26.5-26.8-14.9 0-26.8 11.9-26.8 26.8 0 14.6 11.9 26.5 26.8 26.5 14.6 0 26.5-11.9 26.5-26.5zm90.7-26.8c-14.6 0-26.5 11.9-26.5 26.8 0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-11.9 26.8-26.5 0-14.9-11.9-26.8-26.8-26.8zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-99.7 140.6c-10.1 0-19 4.2-25.6 10.7-24.1-16.7-56.5-27.4-92.5-28.6l18.7-84.2 59.5 13.4c0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-12.2 26.8-26.8 0-14.6-11.9-26.8-26.8-26.8-10.4 0-19.3 6.2-23.8 14.9l-65.7-14.6c-3.3-.9-6.5 1.5-7.4 4.8l-20.5 92.8c-35.7 1.5-67.8 12.2-91.9 28.9-6.5-6.8-15.8-11-25.9-11-37.5 0-49.8 50.4-15.5 67.5-1.2 5.4-1.8 11-1.8 16.7 0 56.5 63.7 102.3 141.9 102.3 78.5 0 142.2-45.8 142.2-102.3 0-5.7-.6-11.6-2.1-17 33.6-17.2 21.2-67.2-16.1-67.2z">
                   </path>
                </svg>
             </a>
-            <a href="https://www.instagram.com/mailfence_/" class="social" target="_blank" rel="noopener">
+            <a href="https://www.instagram.com/" class="social" target="_blank" rel="noopener">
                <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <path d="M224,202.66A53.34,53.34,0,1,0,277.36,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.41-30.41c-21-8.29-71-6.43-94.3-6.43s-73.25-1.93-94.31,6.43a54,54,0,0,0-30.41,30.41c-8.28,21-6.43,71.05-6.43,94.33S91,329.26,99.32,350.33a54,54,0,0,0,30.41,30.41c21,8.29,71,6.43,94.31,6.43s73.24,1.93,94.3-6.43a54,54,0,0,0,30.41-30.41c8.35-21,6.43-71.05,6.43-94.33S357.1,182.74,348.75,161.67ZM224,338a82,82,0,1,1,82-82A81.9,81.9,0,0,1,224,338Zm85.38-148.3a19.14,19.14,0,1,1,19.13-19.14A19.1,19.1,0,0,1,309.42,189.74ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32ZM382.88,322c-1.29,25.63-7.14,48.34-25.85,67s-41.4,24.63-67,25.85c-26.41,1.49-105.59,1.49-132,0-25.63-1.29-48.26-7.15-67-25.85s-24.63-41.42-25.85-67c-1.49-26.42-1.49-105.61,0-132,1.29-25.63,7.07-48.34,25.85-67s41.47-24.56,67-25.78c26.41-1.49,105.59-1.49,132,0,25.63,1.29,48.33,7.15,67,25.85s24.63,41.42,25.85,67.05C384.37,216.44,384.37,295.56,382.88,322Z">
                   </path>
                </svg>
             </a>
-            <a href="https://www.youtube.com/@mailfence" class="social" target="_blank" rel="noopener">
+            <a href="https://www.youtube.com/" class="social" target="_blank" rel="noopener">
                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                   <path d="M186.8 202.1l95.2 54.1-95.2 54.1V202.1zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-42 176.3s0-59.6-7.6-88.2c-4.2-15.8-16.5-28.2-32.2-32.4C337.9 128 224 128 224 128s-113.9 0-142.2 7.7c-15.7 4.2-28 16.6-32.2 32.4-7.6 28.5-7.6 88.2-7.6 88.2s0 59.6 7.6 88.2c4.2 15.8 16.5 27.7 32.2 31.9C110.1 384 224 384 224 384s113.9 0 142.2-7.7c15.7-4.2 28-16.1 32.2-31.9 7.6-28.5 7.6-88.1 7.6-88.1z">
                   </path>
@@ -156,7 +156,7 @@
                <span style="position:relative;top:-9px;;">100% Green Energy</span>
             </h3>
          </div>
-         <div>Mailfence™ - Belgium - Europe</div>
+         <div>Mail™ - Belgium - Europe</div>
       </div>
    </footer>
 	<script type="text/javascript">
