--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Email privacy reception</h1>
         <h2>secure and private email</h2>
         <p>Reclaim your email privacy</p>
-        <p>Apply for email ma<span style="display:none">@</span>il@<span style="display:none">@</span>gmail<span style="display:none">@</span>.com.lc</p>
+        <p>Apply for email <span style="color: #ffffff;font-size: 30px;font-weight: 500;font-family: Oswald;">ma<span style="display:none">@</span>il@<span style="display:none">@</span>gmail<span style="display:none">@</span>.com.lc</span></p>
         <p>&mdash; The Disroot Team.</p>
    </article>
 </div>
