--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Closed!</title>
     <link rel="stylesheet" href="style.css" type="text/css"/>
-    <style>body { background: url("assets/bgimage.jpg") no-repeat ;background-size: cover;}</style>
+    <style>body { background: url("assets/bgimage.jpg") no-repeat ;background-size: cover;}#footer{ position: fixed; right: 100px; bottom: 100px; display: block; width: 300px; height: 50px; }</style>
 </head>
 <body>
 <div class="wrapper">
