--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>secure and private email</h2>
         <p>Reclaim your email privacy</p>
         <p>Apply for email <span style="color: #ffffff;font-size: 30px;font-weight: 500;font-family: Oswald;">ma<span style="display:none">@</span>il@<span style="display:none">@</span>gmail<span style="display:none">@</span>.com.lc</span></p>
-        <p>&mdash; The Disroot Team.</p>
+        <p>&mdash; The AivMail Team.</p>
    </article>
 </div>
 <div id="footer"><a href="/private-email.html" style="color: white;">Private email</a></div>
