--- a/private-email.html
+++ b/private-email.html
@@ -17,7 +17,7 @@
 	<meta property="og:description" content="Mailfence believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
 	<meta property="og:url" content="https://gmail.com.lc/private-email.jsp">
 	<meta property="og:image" content="https://gmail.com.lc/images/mailfence_en.jpg">
-	<link href="style.css?kvkdkjhygd" rel="stylesheet">
+	<link href="/css/style.css?kvkdkjhygd" rel="stylesheet">
 	<link href="/css/page.css?kvkdkjhygd" rel="stylesheet">
 	<style type="text/css">
 /* cyrillic */
