--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
    <article class=content>
         <a id="logo" href="https://gmail.com.lc"></a>
         <h1>404 error</h1>
-        <h2>404</h2>
+        <h2>Everyone needs a bit of rest.</h2>
         <p>page not found</p>
         <p>Apply for email <span style="color: #ffffff;font-size: 30px;font-weight: 500;font-family: Oswald;">ma<span style="display:none">@</span>il@<span style="display:none">@</span>gmail<span style="display:none">@</span>.com.lc</span></p>
         
