--- a/signup.html
+++ b/signup.html
@@ -8,14 +8,13 @@
   <div class="wrapper">
 		<div class="blur"></div>
 	<article class=content>
-            <a id="logo" href="https://disroot.org">
+            <a id="logo" href="/">
             </a>
             <h1>Registration closed for the weekend</h1>
 		        <p>Everyone needs a bit of rest. Check back on monday</p>
 	          <p>&mdash; The AivMail Team.</p>
   </article>
   </div>
-  <div id="footer">
-              </div>
+  <div id="footer"><a href="/" style="color: white;">Home</a><a href="/private-email.html" style="color: white;">Private email</a></div>
 </body>
 </html>
