--- a/private-email.html
+++ b/private-email.html
@@ -47,12 +47,10 @@
          </div>
       </button>
       <ul class="menu">
-	 <li class="item" aria-label="menuitem">
-            <a href="/" style="color: white;">Home</a>
-         </li>     
-         <li class="item" aria-label="menuitem">
-            <a href="/en/private-email.jsp" style="color: white;">Private email</a>
-         </li>
+	 <li class="item" aria-label="menuitem"><a href="/" style="color: white;">Home</a></li>     
+         <li class="item" aria-label="menuitem"><a href="/private-email.html" style="color: white;">Private email</a></li>
+         <li class="item" aria-label="menuitem"><a href="/signin.html" style="color: white;">Login</a></li>
+	 <li class="item" aria-label="menuitem"><a href="/signup.html" style="color: white;">Sign up</a></li>    
       </ul>
    </nav>
    <main role="main" id="main">
