--- a/signup.html
+++ b/signup.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <title>Closed!</title>
+    <style>body { background: url("assets/bgimage.jpg") no-repeat ;background-size: cover;}</style>
     </head>
 <body>
   <div class="wrapper">
