--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <p>&mdash; The AivMail Team.</p>
    </article>
 </div>
-<div id="footer"><a href="/private-email.html" style="color: white;">Private email</a></div>
+<div id="footer"><a href="/" style="color: white;">Home</a><a href="/private-email.html" style="color: white;">Private email</a><a href="/signin.html" style="/* color: white; */">Login</a><a href="/signup.html" style="color: white;">Sign up</a></div>
 </body>
 </html>
