--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <title>Closed!</title>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
-    <style>body { background: url("assets/bgimage.jpg") no-repeat ;background-size: cover;}#footer{ position: fixed; right: 100px; bottom: 100px; display: block; width: 300px; height: 50px; }</style>
+    <style>body { background: url("assets/bgimage.jpg") no-repeat ;background-size: cover;}</style>
 </head>
 <body>
 <div class="wrapper">
@@ -17,6 +17,6 @@
         
    </article>
 </div>
-<div id="footer"><a href="/" style="color: white;">Home</a><a href="/private-email.html" style="color: white;">Private email</a></div>
+<div id="footer"><a href="/" style="color: white;">Home</a><a href="/private-email.html" style="color: white;">Private email</a><a href="/signin.html" style="color: white;">Login</a><a href="/signup.html" style="color: white;">Sign up</a></div>
 </body>
 </html>
