--- a/private-email.html
+++ b/private-email.html
@@ -46,7 +46,7 @@
             </header>
          </div>
          <div class="row register_mobile">
-            <a href="/registration/?lg=en&amp;back=1&amp;nextPage=%2Fsw%3Ftype%3DL%26state%3D0%26lf%3Dmailfence" class="register_button" rel="nofollow" aria-label="Register">Sign up</a>
+            <a href="/signup.html" class="register_button" rel="nofollow" aria-label="Register">Sign up</a>
          </div>
       </section>
       <section class="container limit" id="details">
