--- a/private-email.html
+++ b/private-email.html
@@ -138,7 +138,7 @@
                <span style="position:relative;top:-9px;;">100% Green Energy</span>
             </h3>
          </div>
-         <div>Mail™ - Belgium - Europe</div>
+         <div>AivMail™ - Belgium - Europe</div>
       </div>
    </footer>
 	<script type="text/javascript">
