--- a/private-email.html
+++ b/private-email.html
@@ -3,19 +3,19 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="Mailfence">
-	<title>This is how Mailfence provides a private email service</title>
-	<meta name="description" content="Mailfence believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
+	<meta name="author" content="AivMail">
+	<title>This is how AivMail provides a private email service</title>
+	<meta name="description" content="AivMail believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff"><meta name="twitter:card" content="summary" />
 	<meta name="twitter:site" content="@mailfence" />
-	<meta name="twitter:title" content="Secure and private email | Mailfence encrypted email service" />
-	<meta name="twitter:description" content="Mailfence is the only secure and private email service that gives you control. A free, interoperable encrypted email service protected by Belgian privacy law." />
-	<meta property="og:title" content="This is how Mailfence provides a private email service" />
+	<meta name="twitter:title" content="Secure and private email | AivMail encrypted email service" />
+	<meta name="twitter:description" content="AivMail is the only secure and private email service that gives you control. A free, interoperable encrypted email service protected by Belgian privacy law." />
+	<meta property="og:title" content="This is how AivMail provides a private email service" />
 	<meta property="og:type" content="website" />
-	<meta property="og:site_name" content="Mailfence">
-	<meta property="og:description" content="Mailfence believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
-	<meta property="og:url" content="https://gmail.com.lc/private-email.jsp">
+	<meta property="og:site_name" content="AivMail">
+	<meta property="og:description" content="AivMail believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
+	<meta property="og:url" content="https://gmail.com.lc/private-email.html">
 	<meta property="og:image" content="https://gmail.com.lc/images/mailfence_en.jpg">
 	<link href="/css/style.css?kvkdkjhygd" rel="stylesheet">
 	<link href="/css/page.css?kvkdkjhygd" rel="stylesheet">
@@ -146,7 +146,7 @@
 
 		function loadImg(elm){
 			if(elm){
-				document.getElementById(elm).src = "/c/mailfence/website/press/screenshots/" + elm + ".png";
+				document.getElementById(elm).src = "/assets/" + elm + ".png";
 			}
 		}
 		$(document).ready(function () {
