--- a/signin.html
+++ b/signin.html
@@ -2,17 +2,17 @@
 <html lang="en" prefix="og: http://ogp.me/ns#" dir="ltr">
   <head>
 	<meta charset="utf-8">
-	<title>Mailfence | Log in to Mailfence</title>
+	<title>AivMail | Log in to AivMail</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Log in to your secure email Mailfence.Support the fight for online privacy.">
-	<meta name="author" content="Mailfence">
+	<meta name="description" content="Log in to your secure email AivMail.Support the fight for online privacy.">
+	<meta name="author" content="AivMail">
 	<link href="/css/style.css" rel="stylesheet">
 	<link href="/css/login.css" rel="stylesheet">
 </head>
 <body>
 <div class="header">	
 	<a href="/">
-		<img src="assets/logo.png" alt="Mailfence"></a>
+		<img src="assets/logo.png" alt="AivMail"></a>
 </div>
 	<div class="login-container">
 		<div class="auth-panel">
@@ -26,7 +26,7 @@
 					</div>
 					<h1 id="title" style="color: rgb(69, 69, 69);">Log in</h1>
 					<form name="authForm" method="post" action="/usw?type=L&amp;state=1&amp;startpage=%2Fflatx%2Findex.jsp" accept-charset="utf-8" onsubmit="loginCheck();">
-						<input type="hidden" name="lf" value="mailfence">
+						<input type="hidden" name="lf" value="AivMail">
 						<div class="form-group">
 							<div class="columns">
 								<div class="column">
