--- a/private-email.html
+++ b/private-email.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="AivMail believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff"><meta name="twitter:card" content="summary" />
-	<meta name="twitter:site" content="@mailfence" />
+	<meta name="twitter:site" content="@AivMail" />
 	<meta name="twitter:title" content="Secure and private email | AivMail encrypted email service" />
 	<meta name="twitter:description" content="AivMail is the only secure and private email service that gives you control. A free, interoperable encrypted email service protected by Belgian privacy law." />
 	<meta property="og:title" content="This is how AivMail provides a private email service" />
@@ -16,14 +16,14 @@
 	<meta property="og:site_name" content="AivMail">
 	<meta property="og:description" content="AivMail believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
 	<meta property="og:url" content="https://gmail.com.lc/private-email.html">
-	<meta property="og:image" content="https://gmail.com.lc/images/mailfence_en.jpg">
+	<meta property="og:image" content="https://gmail.com.lc/images/AivMail_en.jpg">
 	<link href="/css/style.css?kvkdkjhygd" rel="stylesheet">
 	<link href="/css/page.css?kvkdkjhygd" rel="stylesheet">
 </head>
 <body id="body">
    <nav class="bar right limit sticky transparent" role="navigation" id="primary" style="background-color: transparent;">
       <a class="brand" href="/">
-         <img src="assets/logo.png" alt="Mailfence">
+         <img src="assets/logo.png" alt="AivMail">
       </a>
       <button type="button" href="#" class="nav-link btn-touch" aria-label="menu">
          <div id="menuToggle">
@@ -42,7 +42,7 @@
          <div class="row">
             <header>
                <h1>We believe online privacy matters.</h1>
-               <h2>Privacy is a right, not a feature. This is the founding principle of the Mailfence service. After the 2013 global mass surveillance revelations by Edward Snowden, it became evident that online privacy is threatened. Therefore, we decided to launch a highly secure email and collaboration service which respects the privacy of users.</h2>
+               <h2>Privacy is a right, not a feature. This is the founding principle of the AivMail service. After the 2013 global mass surveillance revelations by Edward Snowden, it became evident that online privacy is threatened. Therefore, we decided to launch a highly secure email and collaboration service which respects the privacy of users.</h2>
             </header>
          </div>
          <div class="row register_mobile">
@@ -56,16 +56,16 @@
             <div class="col of-9">
                <li>
                   <span>No tracking, no advertising</span>We do not use any third-party advertising or marketing trackers. We do not track your activity in the application.
-                  <br>Mailfence is completely free from ads. We do not send spams or solicitations. We have never and will never commercialize our databases or share data with any third-party for targeted advertising or any other purpose.</li>
+                  <br>AivMail is completely free from ads. We do not send spams or solicitations. We have never and will never commercialize our databases or share data with any third-party for targeted advertising or any other purpose.</li>
                <li>
                   <span>No third-party access to your data</span>We have never and will never create backdoors or government shadow access that could be used to spy on our users.
                   <br>Our SSL/TLS certificate does not include any US certification authority in the certification chain.&nbsp; Check our
                   <a target="_blank">design philosophy</a>for more details.</li>
                <li>
-                  <span>No one can read your encrypted emails</span>Since emails are encrypted by your browser and decrypted by the intended recipients, no one else can read them, not even Mailfence. This is called end-to-end encryption (E2EE).
+                  <span>No one can read your encrypted emails</span>Since emails are encrypted by your browser and decrypted by the intended recipients, no one else can read them, not even AivMail. This is called end-to-end encryption (E2EE).
                   <br>We do store your private key on our servers but we can't read it, since it is encrypted with your passphrase (via AES-256). There is no root key that would allow us to decrypt messages encrypted with your keys.</li>
                <li>
-                  <span>Strict privacy laws</span>In many countries, government sponsored programmes collect massive amounts of data from the Internet. This data collection is done without any search warrant, court order, or subpoena. In Belgium, where Mailfence is located and our servers hosted, the law protects privacy. Only a valid Belgian court order can force us to release data. Since we have no foreign parent company, we never comply with any rogue or other data requests from either domestic or foreign authorities. We are not liable to US gag orders or NSL’s.</li>
+                  <span>Strict privacy laws</span>In many countries, government sponsored programmes collect massive amounts of data from the Internet. This data collection is done without any search warrant, court order, or subpoena. In Belgium, where AivMail is located and our servers hosted, the law protects privacy. Only a valid Belgian court order can force us to release data. Since we have no foreign parent company, we never comply with any rogue or other data requests from either domestic or foreign authorities. We are not liable to US gag orders or NSL’s.</li>
                <li>
                   <span>Transparency</span>We think that transparency is key to building trust between you and us. Therefore, we have from day one, maintained an up-to-date
                   <a target="blank_">transparency and warrant canary report</a>. It lists all the data requests that we have received, including the ones that we denied.
