--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Closed!</title>
+    <title>AivMail provides a private email service</title>
+	<meta name="description" content="AivMail believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff"><meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="@AivMail" />
+	<meta name="twitter:title" content="Secure and private email | AivMail encrypted email service" />
+	<meta name="twitter:description" content="AivMail is the only secure and private email service that gives you control. A free, interoperable encrypted email service protected by Belgian privacy law." />
+	<meta property="og:title" content="This is how AivMail provides a private email service" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="AivMail">
+	<meta property="og:description" content="AivMail believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <style>body { background: url("assets/bgimage.jpg") no-repeat ;background-size: cover;}</style>
 </head>
