--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,27 @@
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <title>Closed!</title>
     <style>body { background: url("assets/bgimage.jpg") no-repeat ;background-size: cover;}</style>
+    <style>
+        .panel {
+        padding: 30px;
+        max-width: 425px;
+        margin: 10% auto;
+        box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
+        }
+        .title {
+        font-size: 1.5em;
+        font-weight: 100;
+        margin-top: 10px;
+        text-align: center;
+        }
+        .recaptcha-center {
+        margin-top: 35px;
+        margin-bottom: 20px;
+        margin-left: 13%;
+        margin-right: 13%;
+        display: block;
+        }
+    </style>
     </head>
 <body>
   <div class="wrapper">
@@ -11,8 +32,17 @@
 	<article class=content>
             <a id="logo" href="/">
             </a>
-            <h1>Registration closed for the weekend</h1>
-		        <p>Everyone needs a bit of rest. Check back on monday</p>
+            
+    <div class="panel">
+	<h3  class="title">Verifying that you are not a robot...</h3>
+        <form id="lsrecaptcha-form" method="POST" action="/.lsrecap/recaptcha?">
+            <div id="recaptchadiv" class="recaptcha-center"></div>
+        </form>
+    </div>
+    <script src="https://www.recaptcha.net/recaptcha/api.js?onload=onloadCallback&render=explicit"
+            async defer>
+    </script>
+
 	          <p>&mdash; The AivMail Team.</p>
   </article>
   </div>
