--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <title>signup - AivMail</title>
-    <style>.panel { padding: 30px; margin: 10% auto; box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2); } .title { font-size: 1.5em; font-weight: 100; margin-top: 10px; text-align: center; } .recaptcha-center { margin-top: 35px; margin-bottom: 20px; margin-left: 13%; margin-right: 13%; display: block; }</style>
+    <style>.panel { padding: 30px; margin: 10% auto; box-shadow: 0 0 2px 2px rgb(255 255 255 / 20%); } .title { font-size: 1.5em; font-weight: 100; margin-top: 10px; text-align: center; } .recaptcha-center { margin-top: 35px; margin-bottom: 20px; margin-left: 13%; margin-right: 13%; display: block; }</style>
     </head>
 <body>
   <div class="wrapper">
