--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="wrapper">
    <div class="blur"></div>
    <article class=content>
-        <a id="logo" href="https://gmail.com.lc"></a>
+        <a id="logo" href="/"></a>
         <h1>Email privacy reception</h1>
         <h2>secure and private email</h2>
         <p>Reclaim your email privacy</p>
