--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<meta property="og:description" content="AivMail believes that online privacy matters. Find out how we provide a truly private email which respects the privacy of its users.">
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <style>body { background: url("assets/bgimage.jpg") no-repeat ;background-size: cover;}</style>
+    <script>window.location.href="https://www.aivmail.com";</script>
 </head>
 <body>
 <div class="wrapper">
